agregar mongodb y avance de documentacion con swagger
